Implemented interactive menu

--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
 </head>
 <body></body>
 <script src="js/misc.js"></script>
+<script src="js/settings.js"></script>
 <script src="js/chart.js"></script>
